# fastapi-blogging-platform-api

./: README.md  docker-compose.yml  pyproject.toml
app/: .env.template  error_handlers.py  main.py
app/actions/: create_superuser.py
app/alembic/versions/: 2025_02_15_1712-6aa23623c0db_create_users_table.py  2025_02_15_1749-91d96ca33769_create_access_tokens_table.py  2025_02_19_1935-7d147b1fc5ec_create_posts_table.py  2025_02_19_1937-8e5ef7edeed4_create_categories_table.py  2025_02_19_1942-37c6954a07c0_add_relationship_between_posts_and_.py
app/api/api_v1/: __init__.py  auth.py  fastapi_users.py  messages.py  posts.py  users.py
app/api/dependencies/: access_tokens.py  fastapi_users.py  posts.py  user_manager.py  users.py
app/api/dependencies/authentication/: __init__.py  strategy.py
app/core/: cache.py  config.py  constants.py  exceptions.py  logger.py
app/core/authentication/: user_manager.py
app/core/models/: __init__.py  access_token.py  base.py  category.py  db_helper.py  post.py  user.py
app/core/models/mixins/: int_id_pk.py
app/core/schemas/: category.py  post.py
app/crud/: posts.py
app/tests/: conftest.py  test_posts.py
app/utils/: __init__.py
