[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pydantic = {extras = ["email"], version = "^2.10.6"}
pydantic-settings = "^2.7.1"
sqlalchemy = "^2.0.37"
asyncpg = "^0.30.0"
alembic = "^1.14.1"
orjson = "^3.10.15"
fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.1"}
redis = "^5.2.1"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
httpx = "^0.28.1"
